Fixed register page issue on mobile

--- a/restaurants/static/restaurants/register&login.css
+++ b/restaurants/static/restaurants/register&login.css
@@ -48,13 +48,19 @@ form {
 
 input {
   width: 80%;
-  padding: 1.2rem;
+  padding: 1rem;
   background-color: transparent;
-  font-size: 1.1rem;
+  font-size: 1rem;
   font-weight: 300;
   border: 1px solid #e6e6e6;
   border-radius: 10px;
   margin-bottom: 10px;
+}
+
+input:focus {
+  outline: none;
+  border: 1px solid var(--Orange);
+  border-radius: 10px;
 }
 
 input[type=submit] {
